<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.autores</groupId>
    <artifactId>autores</artifactId>
    <packaging>pom</packaging>
    <version>17.1.4-SNAPSHOT</version>

    <modules>
        <module>annotations</module>
        <module>processing</module>
    </modules>

    <name>AutoRes.uk Parent POM</name>
    <description>
        Annotation driven library for handling embedded resources
    </description>
    <url>https://autores.uk</url>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <format.version>17.3.3</format.version>

        <joor.version>0.9.15</joor.version>
        <junit.version>6.0.3</junit.version>

        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <maven.jar.plugin.version>3.5.0</maven.jar.plugin.version>
        <maven.javadoc.plugin.version>3.12.0</maven.javadoc.plugin.version>
        <maven.source.plugin.version>3.4.0</maven.source.plugin.version>
        <jacoco.maven.plugin.version>0.8.14</jacoco.maven.plugin.version>
        <spotbugs.maven.plugin.version>4.9.8.3</spotbugs.maven.plugin.version>
        <spotbugs.version>4.9.8</spotbugs.version>
        <maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
        <maven.pmd.plugin.version>3.28.0</maven.pmd.plugin.version>
        <maven.enforcer.plugin.version>3.6.2</maven.enforcer.plugin.version>
        <maven.checkstyle.plugin.version>3.6.0</maven.checkstyle.plugin.version>
        <maven.jxr.plugin.version>3.6.0</maven.jxr.plugin.version>
        <maven.gpg.plugin.version>3.2.8</maven.gpg.plugin.version>
        <central.publishing.maven.plugin>0.10.0</central.publishing.maven.plugin>
        <findsecbugs-plugin.version>1.13.0</findsecbugs-plugin.version>

        <javadoc.bottom><![CDATA[
                        Copyright 2023-2026<br>
                        <a target="_blank" href="https://github.com/autores-uk/autores/blob/main/LICENSE.txt">https://github.com/autores-uk/autores/blob/main/LICENSE.txt</a>
                        <script>
                        (() => {
                            const anchors = document.querySelectorAll("a");
                            anchors.forEach((a) => {
                                const href = a.getAttribute("href");
                                if (href && href.startsWith("https://")) {
                                    a.setAttribute("target", "_top");
                                }
                            });
                        })();
                        </script>
                        ]]></javadoc.bottom>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <email>autores.uk@proton.me</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/autores-uk/autores-uk.git</connection>
        <developerConnection>scm:git:ssh://github.com:autores-uk/autores.git</developerConnection>
        <url>https://github.com/autores-uk/autores/tree/main</url>
    </scm>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven.jxr.plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>

    <distributionManagement>
        <repository>
            <id>central</id>
            <url>https://central.sonatype.com</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <!-- https://central.sonatype.org/publish/requirements/ -->
            <!-- https://central.sonatype.org/publish/publish-maven/ -->
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven.gpg.plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <!-- This is necessary for gpg to not try to use the pinentry programs -->
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>${central.publishing.maven.plugin}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <autoPublish>true</autoPublish>
                            <!-- waitUntil>published</waitUntil-->
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>